--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.0",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
