--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi==0.109.0
+uvicorn==0.27.0
 python-dotenv==1.0.0
 motor==3.3.2
 pymongo==4.6.1
-pydantic==2.5.2 
+pydantic==2.5.2
+trafilatura==1.6.3
+httpx==0.26.0 
