--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.8'
 
 services:
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    restart: unless-stopped
+
   backend:
     build: 
       context: ./backend
@@ -11,6 +19,8 @@ services:
       - ./backend/.env
     volumes:
       - ./backend/logs:/app/logs
+    depends_on:
+      - mongodb
     restart: unless-stopped
 
   frontend:
