--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -66,6 +66,19 @@
     </build>
 
     <dependencies>
+        <!-- OkHttp Core -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.11.0</version>
+        </dependency>
+
+        <!-- (Optional) Logging Interceptor for debugging -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>4.11.0</version>
+        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
