--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,4 @@
-version: '3.8'
-
 services:
-  mongodb:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb_data:/data/db
-    restart: unless-stopped
 
   backend:
     build: 
@@ -16,7 +7,9 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ./backend/.env
+      - .env
+    environment:
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     volumes:
       - ./backend/logs:/app/logs
     depends_on:
@@ -30,31 +23,51 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ./frontend/.env
+      - .env
     depends_on:
       - backend
     restart: unless-stopped
 
-  nginx:
-    image: nginx:alpine
+  telegram-bot:
+    build:
+      context: ./telegram-bot
+      dockerfile: Dockerfile
+    environment:
+      - READ_LATER_BOT_KEY=${READ_LATER_BOT_KEY}
+    depends_on:
+    - mongodb
+    restart: unless-stopped
+
+  mongodb:
+    image: mongo:latest
     ports:
-      - "80:80"
-      - "443:443"
+      - "27017:27017"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    depends_on:
-      - frontend
-      - backend
+      - mongodb_data:/data/db
     restart: unless-stopped
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./certbot/conf:/etc/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   depends_on:
+  #     - frontend
+  #     - backend
+  #   restart: unless-stopped
+
+  # certbot:
+  #   image: certbot/certbot
+  #   volumes:
+  #     - ./certbot/conf:/etc/letsencrypt
+  #     - ./certbot/www:/var/www/certbot
+  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+
 
 volumes:
   mongodb_data: 
