--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       - "8000:8000"
     env_file:
       - .env
-    environment:
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     volumes:
       - ./backend/logs:/app/logs
     depends_on:
@@ -32,10 +30,10 @@ services:
     build:
       context: ./telegram-bot
       dockerfile: Dockerfile
-    environment:
-      - READ_LATER_BOT_KEY=${READ_LATER_BOT_KEY}
+    env_file:
+      - .env
     depends_on:
-    - mongodb
+      - mongodb
     restart: unless-stopped
 
   mongodb:
