--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,6 +3,10 @@ name: Build Docker Images
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-backend:
     name: Build Backend Image
