--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ TELEGRAM_BOT_ENVIRONMENT=test
 
 # bot API key: put your prod or test API key here
 TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+
+# link to the mini app
+TELEGRAM_MINI_APP_LINK=https://longreader.brzv.sk
