--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
 # bot username
 TELEGRAM_BOT_USERNAME=longreader_bot
 
-# mini app name in bot menu (reader_test for test, reader for prod)
+# mini app name in bot menu (reader_test for test, LongreaderApp for prod)
 TELEGRAM_APP_NAME=reader_test
 
 # link to the mini app
