Add backup scripts for DB

--- a/docker-compose-ghcr.yml
+++ b/docker-compose-ghcr.yml
@@ -7,7 +7,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./backend/logs:/app/logs
+      - ./logs/backend:/app/logs
     depends_on:
       - mongodb
     restart: unless-stopped
