--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,7 +9,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ./backend/logs:/app/logs
+      - ./logs/backend:/app/logs
     depends_on:
       - mongodb
     restart: unless-stopped
