--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ MONGODB_URL=mongodb://mongodb:27017
 DATABASE_NAME=longreader
 NEXT_PUBLIC_API_URL=http://backend:8000
 
+DAILY_ARTICLE_LIMIT=10
+
 # telegram-bot environment: prod/test
 TELEGRAM_BOT_ENVIRONMENT=test
 
