--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -106,6 +106,13 @@
             <version>4.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
         <!-- (Optional) Logging Interceptor for debugging -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
