Refactor .env.example for clarity

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,32 @@
-# backend env vars
+########################################
+# Backend and Frontend Environment
+########################################
+
+# MongoDB connection settings
 MONGODB_URL=mongodb://mongodb:27017
 DATABASE_NAME=longreader
+
+# Public API URL used by the frontend
 NEXT_PUBLIC_API_URL=http://backend:8000
 
+# Optional service limits
 DAILY_ARTICLE_LIMIT=10
 
-# telegram-bot environment: prod/test
+########################################
+# Telegram Bot Configuration
+########################################
+
+# Environment: "prod" or "test"
 TELEGRAM_BOT_ENVIRONMENT=test
 
-# bot API key: put your prod or test API key here
-TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+# Bot API token (obtain from BotFather)
+TELEGRAM_BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 
-# bot username
+# Bot username (without @)
 TELEGRAM_BOT_USERNAME=longreader_bot
 
-# mini app name in bot menu (reader_test for test, LongreaderApp for prod)
+# Mini app name in bot menu (e.g., reader_test for test, LongreaderApp for prod)
 TELEGRAM_APP_NAME=reader_test
 
-# link to the mini app
-TELEGRAM_MINI_APP_LINK=https://longreader.brzv.sk
+# Link to the mini app (public URL)
+TELEGRAM_MINI_APP_LINK=https://path.to.frontend.com
