--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "longread",
   "version": "0.1.0",
   "private": true,
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "packageManager": "yarn@4.6.0",
   "scripts": {
     "dev": "next dev --turbopack",
